// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FAVORITESSCREEN_NAME_FAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": true,
      "name": "artur",
    },
  },
  "type": "FAVORITESSCREEN_NAME_FAVORITE",
}
`;

exports[`creates a FAVORITESSCREEN_VIEW action 1`] = `
Object {
  "type": "LISTSCREEN_VIEW",
}
`;

exports[`creates a FETCH_NAMES_SUCCESS action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "names": Array [
      Object {
        "isFavorite": true,
        "name": "artur",
      },
    ],
  },
  "type": "FETCH_NAMES_SUCCESS",
}
`;

exports[`creates a LISTSCREEN_NAME_UNFAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": false,
      "name": "artur",
    },
  },
  "type": "LISTSCREEN_NAME_UNFAVORITE",
}
`;

exports[`creates a LISTSCREEN_VIEW action 1`] = `
Object {
  "type": "FAVORITESSCREEN_VIEW",
}
`;
